terraform/alb.tf
resource "aws_security_group" "alb_sg" {
  name        = "innovatemart-alb-sg"
  description = "Security group for the ALB"
  vpc_id      = module.vpc.vpc_id

  # Allow HTTP traffic from the internet
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTPS traffic from the internet
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_lb" "main" {
  name               = "innovatemart-ui-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = module.vpc.public_subnets # Place ALB in public subnets
}

resource "aws_lb_target_group" "ui" {
  name     = "innovatemart-ui-tg"
  port     = 30931
  protocol = "HTTP"
  vpc_id   = module.vpc.vpc_id
  target_type = "instance"

  health_check {
    path = "/" 
  }
}

resource "aws_lb_listener" "http_redirect" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"
    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.main.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = "arn:aws:acm:us-east-1:049886442582:certificate/b80c540d-f79d-4609-bd98-d538c9fa782a"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.ui.arn
  }
  depends_on = [aws_lb_target_group.ui]
}

# This resource automatically registers EKS nodes with the target group
resource "aws_autoscaling_attachment" "eks_nodes" {
  autoscaling_group_name = module.eks.managed_node_groups_autoscaling_group_names[0]
  lb_target_group_arn    = aws_lb_target_group.ui.arn
}
